# podscribe

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  Recommended_fixes.md  leadership_team.yaml  leadership_team.yaml.example  podscribe.yaml  podscribe.yaml.example  production_readiness.md  pyproject.toml  requirements.txt  roadmap.md
.bob/rules/: security_rules.md
.github/workflows/: ci.yml
.scratch/: ollama-to-mlx-lm-notes.md
benchmarks/: __init__.py  bench_enhance.py  bench_meeting.py  bench_transcribe.py  eval_cache.py  eval_checks.py  eval_enhance.py  eval_judge.py  eval_manifest.py  eval_manifest.yaml  eval_rate.py
benchmarks/fixtures/: consolidate_response.yaml
benchmarks/results/: bench-20260623-185427.json  bench-transcribe-20260630-091339.json  bench-transcribe-20260630-210237.json
docs/: ARCHITECTURE.md  BENCHMARKS.md  EVALS.md  KT-HANDOFF.md  ROADMAP.md  USER-MANUAL.md
docs/adr/: 0001-tui-modal-layout.md
docs/fso/manual_summaries/: kt_session_2.md
docs/superpowers/plans/: 2026-06-22-consolidate-plan.md  2026-06-22-context-glossary.md  2026-06-22-recommended-cleanup.md  2026-06-22-section-4-architecture.md  2026-06-22-tui-modal-redesign.md  2026-06-23-tui-redesign.md  2026-06-25-god-mode.md  2026-06-25-persistent-learning.md  2026-06-27-fs-tools.md  diarize-manual-verification.md
docs/superpowers/specs/: 2026-06-22-consolidate-design.md  2026-06-22-context-glossary-design.md  2026-06-22-recommended-cleanup-design.md  2026-06-22-section-4-architecture-design.md  2026-06-23-tui-redesign-design.md  2026-06-25-god-mode-design.md  2026-06-27-fs-tools-design.md
fixtures/asr/: manifest.yaml  short-clear.f32  short-clear.txt  short-names.f32  short-names.txt  short-numbers.f32  short-numbers.txt
podscribe/: __init__.py  __main__.py  agent.py  agent_tools.py  audio.py  cli.py  config.py  diarizer.py  export.py  fs_tools.py  glossary.py  hf_auth.py  llm.py  media.py  models.py  search.py  storage.py  summarize.py  transcriber.py  tui.py
podscribe/backends/: __init__.py  base.py  parakeet_mlx.py  parakeet_nemo.py  registry.py  select.py  whisper_faster.py  whisper_mlx.py
podscribe/providers/: __init__.py  base.py  ollama.py  openai_compat.py  registry.py
tests/: test_agent.py  test_agent_tools.py  test_audio.py  test_backend_parakeet_mlx.py  test_backend_parakeet_nemo.py  test_backend_registry.py  test_backend_select.py  test_backend_whisper_faster.py  test_backend_whisper_mlx.py  test_backends_base.py  test_bench_enhance.py  test_bench_meeting.py  test_bench_transcribe.py  test_cli.py  test_config.py  test_diarizer.py  test_eval_cache.py  test_eval_checks.py  test_eval_enhance.py  test_eval_judge.py  test_eval_manifest.py  test_eval_rate.py  test_export.py  test_fs_tools.py  test_glossary.py  test_hf_auth.py  test_kt_cli.py  test_kt_storage.py  test_llm.py  test_llm_delegation.py  test_media.py  test_models.py  test_provider_base.py  test_provider_ollama.py  test_provider_openai.py  test_provider_registry.py  test_search.py  test_storage.py  test_summarize.py  test_transcriber.py  (+2 more)
