[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podscribe"
version = "0.1.0"
description = "Local-first live transcription for 1:1s and team meetings. Pod-isolated. Privacy-respecting."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Mavis"}]
license = {text = "MIT"}

dependencies = [
    "mlx-whisper>=0.4.0",
    "webrtcvad>=2.0.10",
    "sounddevice>=0.4.6",
    "rich>=13.7",
    "readchar>=4.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "jiwer>=3.0", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
podscribe = "podscribe.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["podscribe*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# Blocking CI gate: the pyflakes/pycodestyle *correctness* rules — real bugs
# (undefined names, invalid syntax, broken f-strings), not style. With
# target-version = py310 above, this also statically rejects 3.10-incompatible
# syntax (e.g. backslashes inside f-string expressions).
#
# The broader style set (F401 unused imports, F541 empty f-strings, import
# sorting) is a tracked burn-down, not yet blocking — see production_readiness.md.
select = ["E9", "F63", "F7", "F82"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true   # mlx_whisper / sounddevice / webrtcvad ship no stubs
warn_unused_ignores = true
# Not yet a blocking CI gate; being tightened module-by-module.
# See production_readiness.md (Phase 0 burn-down).
