[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podscribe"
version = "0.1.0"
description = "Local-first live transcription for 1:1s and team meetings. Pod-isolated. Privacy-respecting."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Mavis"}]
license = {text = "MIT"}

# NOTE: `ingest --asr` and the media benchmarks require ffmpeg on PATH
# (`brew install ffmpeg`). Not a pip dependency.
#
# The ASR engine is a platform-specific extra, not a core dependency, so the
# package installs on any OS. Install the backend for your hardware:
#   Apple Silicon:  pip install -e '.[mlx]'      (Whisper via mlx-whisper)
#   NVIDIA/CUDA:    pip install -e '.[cuda]'      (Whisper via faster-whisper)
dependencies = [
    "webrtcvad>=2.0.10",
    "sounddevice>=0.4.6",
    "rich>=13.7",
    "readchar>=4.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "jiwer>=3.0"]
diarize = [
    "pyannote.audio>=4.0",  # 4.x pipeline API (token=, DiarizeOutput, community-1 model)
    "torch>=2.3",
    "torchaudio>=2.3",
]
mlx = ["mlx-whisper>=0.4.0"]
# CTranslate2 (via faster-whisper) needs the CUDA 12 runtime. On Windows it is
# not bundled, so pull the cublas/cudnn wheels; the backend adds them to the
# DLL search path at load time. Verified on an RTX 5090 (Blackwell sm_120).
cuda = [
    "faster-whisper>=1.0",
    "nvidia-cublas-cu12>=12.3; platform_system == 'Windows'",
    "nvidia-cudnn-cu12>=9.0; platform_system == 'Windows'",
]
parakeet-mlx = ["parakeet-mlx>=0.1"]
parakeet-cuda = ["nemo_toolkit[asr]>=2.0"]

[project.scripts]
podscribe = "podscribe.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["podscribe*"]
